write docs in markdown post

--- a/archives.html
+++ b/archives.html
@@ -83,6 +83,8 @@
   </header>
   <div>
     <dl>
+      <dt>November 01, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/write-documentation-in-markdown.html">Write Documentation in Markdown</a></dd>
       <dt>October 30, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/todo-kata-python-part-3.html">Todo Kata - Python Part 3</a></dd>
       <dt>October 28, 2020</dt>
