--- a/index.html
+++ b/index.html
@@ -79,6 +79,28 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/write-documentation-in-markdown.html#write-documentation-in-markdown">Write Documentation in Markdown</a></h2>
+    <p>
+          Posted on November 01, 2020 in <a href="https://jameselliothart.github.io/category/productivity.html">Productivity</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/markdown.html">Markdown</a>,              <a href="https://jameselliothart.github.io/tag/pandoc.html">Pandoc</a>,              <a href="https://jameselliothart.github.io/tag/tips.html">Tips</a>,              <a href="https://jameselliothart.github.io/tag/productivity.html">Productivity</a>,              <a href="https://jameselliothart.github.io/tag/documentation.html">Documentation</a>
+    </p>
+  </header>
+  <div>
+      <p>I think the dictum <a href="https://agilemanifesto.org/">"working software over comprehensive documentation"</a> is very much undervalued in the enterprise.
+However, there are times when documentation is quite necessary, and the methods we have for creating and maintaining it seem underdeveloped compared to our patterns for software.
+The two challenges I have encountered most …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/write-documentation-in-markdown.html#write-documentation-in-markdown">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/todo-kata-python-part-3.html#todo-kata-python-part-3">Todo Kata - Python Part 3</a></h2>
     <p>
           Posted on October 30, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
@@ -282,30 +304,6 @@ In <a href="maps-of-devops-the-first-way">The First Way</a>, we introduced the s
 In doing so, we discovered that Single …</p>
       <br>
       <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html#maps-of-devops-the-second-way">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">Maps of DevOps: The First Way</a></h2>
-    <p>
-          Posted on December 08, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a>,              <a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a>,              <a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a>,              <a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a>
-    </p>
-  </header>
-  <div>
-      <h2>Welcome</h2>
-<p>Welcome to the second post in the Maps of DevOps series!
-In this installment, we will explore The First Way: Systems Thinking.</p>
-<h2>Motivating Scenario: Mailing Letters</h2>
-<p>In an attempt to avoid the obfuscating effect of technical jargon, we will use a technology-agnostic scenario as the stage within which to …</p>
-      <br>
-      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">    Continue reading
 </a>
   </div>
 </article>
