--- a/tags.html
+++ b/tags.html
@@ -91,17 +91,21 @@
           <li><a href="https://jameselliothart.github.io/tag/dapper.html">Dapper</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/development.html">Development</a> (7)</li>
           <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/documentation.html">Documentation</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/events.html">Events</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/f.html">F#</a> (5)</li>
           <li><a href="https://jameselliothart.github.io/tag/feedback.html">Feedback</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/functionalprogramming.html">FunctionalProgramming</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/markdown.html">Markdown</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/mediatr.html">MediatR</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/monitoring.html">Monitoring</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/mypy.html">mypy</a> (2)</li>
           <li><a href="https://jameselliothart.github.io/tag/net.html">.NET</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/orm.html">ORM</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/pandoc.html">Pandoc</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/patterns.html">Patterns</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/productivity.html">Productivity</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/python.html">Python</a> (3)</li>
           <li><a href="https://jameselliothart.github.io/tag/reactiveprogramming.html">ReactiveProgramming</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/rxpy.html">RxPY</a> (1)</li>
@@ -111,6 +115,7 @@
           <li><a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thesecondwayofdevops.html">TheSecondWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/tips.html">Tips</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/todo.html">Todo</a> (7)</li>
           <li><a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a> (7)</li>
     </ul>
