--- a/categories.html
+++ b/categories.html
@@ -86,6 +86,7 @@
       <li><a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a> (1)</li>
       <li><a href="https://jameselliothart.github.io/category/development.html">Development</a> (1)</li>
       <li><a href="https://jameselliothart.github.io/category/devops.html">DevOps</a> (3)</li>
+      <li><a href="https://jameselliothart.github.io/category/productivity.html">Productivity</a> (1)</li>
       <li><a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a> (7)</li>
     </ul>
   </div>
