--- a/index2.html
+++ b/index2.html
@@ -79,6 +79,30 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">Maps of DevOps: The First Way</a></h2>
+    <p>
+          Posted on December 08, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a>,              <a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a>,              <a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a>,              <a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a>
+    </p>
+  </header>
+  <div>
+      <h2>Welcome</h2>
+<p>Welcome to the second post in the Maps of DevOps series!
+In this installment, we will explore The First Way: Systems Thinking.</p>
+<h2>Motivating Scenario: Mailing Letters</h2>
+<p>In an attempt to avoid the obfuscating effect of technical jargon, we will use a technology-agnostic scenario as the stage within which to …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/maps-of-devops-introduction.html#maps-of-devops-introduction">Maps of DevOps: Introduction</a></h2>
     <p>
           Posted on October 25, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
