--- a/write-documentation-in-markdown.html
+++ b/write-documentation-in-markdown.html
@@ -33,7 +33,7 @@
 <meta property="og:url" content="https://jameselliothart.github.io/write-documentation-in-markdown.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-11-01 00:00:00-05:00"/>
-<meta property="article:modified_time" content=""/>
+<meta property="article:modified_time" content="2020-11-06 00:00:00-06:00"/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="Productivity"/>
 <meta property="article:tag" content="Markdown"/>
@@ -94,6 +94,7 @@
           Posted on November 01, 2020 in <a href="https://jameselliothart.github.io/category/productivity.html">Productivity</a>
 
           </br>
+            Updated: November 06, 2020
     </p>
   </header>
 
@@ -141,6 +142,7 @@ The <a href="https://pandoc.org/demos.html">documentation</a> has an extensive l
 <h2>Summary</h2>
 <ol>
 <li>Write documents in <a href="https://www.markdownguide.org/getting-started/">Markdown</a></li>
+<li>Pro-tip: write each sentence on its own line to make diffs more effective</li>
 <li><a href="https://git-scm.com/">Version control</a> them</li>
 <li>Convert as needed with <a href="https://pandoc.org/">pandoc</a></li>
 <li>Profit</li>
