--- a/pages/about.html
+++ b/pages/about.html
@@ -81,11 +81,16 @@
     <h1 id="about">About</h1>
   </header>
   <div>
-<p><img alt="Me" src="https://jameselliothart.github.io/images/me.jpeg"></p>
-<p>Hi, I am James Hart, and I created this blog to write about topics that
-interest me. The primary focus will be on DevOps and technology - this
-is hosted on github after all - but I may occasionally discuss
-weightlifting or Jungian thought (or maybe all those things at once).</p>  </div>
+<h2>Welcome!</h2>
+<p>I created this blog to serve as an outlet for ideas I had around DevOps, software development, and IT generally.
+I will also write about things I have learned or am working on in order to reinforce those lessons and serve as a reference in the future.
+By making it public, it is my hope that others may find something useful as well.</p>
+<p>This blog is hosted as a GitHub Page and created with <a href="https://blog.getpelican.com/">Pelican</a>.
+The articles below were instrumental in making this possible:</p>
+<ul>
+<li><a href="https://opensource.com/article/19/5/run-your-blog-github-pages-python">Run your blog on GitHub Pages with Python</a></li>
+<li><a href="https://www.fullstackpython.com/blog/generating-static-websites-pelican-jinja2-markdown.html">How to Create Your First Static Site with Pelican and Jinja2</a></li>
+</ul>  </div>
 </article>
 
     <footer>
