pluralsight podcast appearance

--- a/archives.html
+++ b/archives.html
@@ -83,6 +83,8 @@
   </header>
   <div>
     <dl>
+      <dt>November 26, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/pluralsight-podcast-appearance.html">Pluralsight Podcast Appearance</a></dd>
       <dt>November 01, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/write-documentation-in-markdown.html">Write Documentation in Markdown</a></dd>
       <dt>October 30, 2020</dt>
