--- a/drafts/object-oriented-vs-functional-patterns.html
+++ b/drafts/object-oriented-vs-functional-patterns.html
@@ -23,16 +23,16 @@
 
 
 <meta name="author" content="James Hart" />
-<meta name="description" content="There is a strange antagonism between object-oriented and functional programming paradigms. The image below from Scott Wlaschin&#39;s excellent talk is often used. I saw the meme before watching the talk (or even knowing the talk existed), and in the context of the talk it is actually a joke. It doesn&#39;t …" />
+<meta name="description" content="There is a sometimes strange antagonism between object-oriented and functional programming paradigms with regard to &#34;design patterns.&#34; I have seen the meme below bandied about by FPers to express something like there The image below from Scott Wlaschin&#39;s excellent Functional programming design patterns talk is often used. I saw the …" />
 <meta name="keywords" content="Development, Opinion, Patterns, C#, F#, Python">
 
 <meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:title" content="Object Oriented vs Functional Patterns"/>
-<meta property="og:description" content="There is a strange antagonism between object-oriented and functional programming paradigms. The image below from Scott Wlaschin&#39;s excellent talk is often used. I saw the meme before watching the talk (or even knowing the talk existed), and in the context of the talk it is actually a joke. It doesn&#39;t …"/>
+<meta property="og:description" content="There is a sometimes strange antagonism between object-oriented and functional programming paradigms with regard to &#34;design patterns.&#34; I have seen the meme below bandied about by FPers to express something like there The image below from Scott Wlaschin&#39;s excellent Functional programming design patterns talk is often used. I saw the …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://jameselliothart.github.io/drafts/object-oriented-vs-functional-patterns.html"/>
 <meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2020-10-31 00:00:00-05:00"/>
+<meta property="article:published_time" content="2020-11-18 00:00:00-06:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="Development"/>
@@ -92,7 +92,7 @@
       
     <h1 id="object-oriented-vs-functional-patterns">Object Oriented vs Functional Patterns</h1>
     <p>
-          Posted on October 31, 2020 in <a href="https://jameselliothart.github.io/category/development.html">Development</a>
+          Posted on November 18, 2020 in <a href="https://jameselliothart.github.io/category/development.html">Development</a>
 
           </br>
     </p>
@@ -100,13 +100,15 @@
 
 
   <div>
-    <p>There is a strange antagonism between object-oriented and functional programming paradigms.
-The image below from Scott Wlaschin's excellent <a href="https://www.youtube.com/watch?v=E8I19uA-wGY">talk</a> is often used.
+    <p>There is a sometimes strange antagonism between object-oriented and functional programming paradigms with regard to "design patterns."
+I have seen the meme below bandied about by FPers to express something like there
+The image below from Scott Wlaschin's excellent <a href="https://www.youtube.com/watch?v=E8I19uA-wGY">Functional programming design patterns</a> talk is often used.
 I saw the meme before watching the talk (or even knowing the talk existed), and in the context of the talk it is actually a joke.
 It doesn't actually address the question.
 You could make the same image and replace "Functions" for "Objects" and claim victory - there are no OO patterns, just objects.
 I often see it taken out of context in a way that obscures rather than reveals an insight.</p>
 <p>The more subtle point is that these patterns or principles are much easier to implement - or even trivial - in a functional paradigm.</p>
+<p><a href="https://github.com/jameselliothart/blog-code/tree/master/OOvsFP">Source code</a></p>
 <p><img src="https://jameselliothart.github.io/images/oo-vs-fp-patterns/patterns.gif" width="500"></p>
 <ul>
 <li>dotnet</li>
