--- a/tags.html
+++ b/tags.html
@@ -105,6 +105,8 @@
           <li><a href="https://jameselliothart.github.io/tag/orm.html">ORM</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/pandoc.html">Pandoc</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/patterns.html">Patterns</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/pluralsight.html">Pluralsight</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/podcast.html">Podcast</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/productivity.html">Productivity</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/python.html">Python</a> (3)</li>
           <li><a href="https://jameselliothart.github.io/tag/reactiveprogramming.html">ReactiveProgramming</a> (1)</li>
@@ -115,7 +117,7 @@
           <li><a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thesecondwayofdevops.html">TheSecondWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (3)</li>
-          <li><a href="https://jameselliothart.github.io/tag/tips.html">Tips</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/tips.html">Tips</a> (2)</li>
           <li><a href="https://jameselliothart.github.io/tag/todo.html">Todo</a> (7)</li>
           <li><a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a> (7)</li>
     </ul>
