personal retros post

--- a/drafts/object-oriented-vs-functional-patterns.html
+++ b/drafts/object-oriented-vs-functional-patterns.html
@@ -24,7 +24,7 @@
 
 <meta name="author" content="James Hart" />
 <meta name="description" content="There is a sometimes strange antagonism between object-oriented and functional programming paradigms with regard to &#34;design patterns.&#34; I have seen the meme below bandied about by FPers to express something like there The image below from Scott Wlaschin&#39;s excellent Functional programming design patterns talk is often used. I saw the …" />
-<meta name="keywords" content="Development, Opinion, Patterns, C#, F#, Python">
+<meta name="keywords" content="Development, Patterns, C#, F#, Python">
 
 <meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:title" content="Object Oriented vs Functional Patterns"/>
@@ -37,7 +37,6 @@
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="Development"/>
 <meta property="article:tag" content="Development"/>
-<meta property="article:tag" content="Opinion"/>
 <meta property="article:tag" content="Patterns"/>
 <meta property="article:tag" content="C#"/>
 <meta property="article:tag" content="F#"/>
@@ -126,7 +125,6 @@ I often see it taken out of context in a way that obscures rather than reveals a
   <div class="tag-cloud">
     <p>
       <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
-      <a href="https://jameselliothart.github.io/tag/opinion.html">Opinion</a>
       <a href="https://jameselliothart.github.io/tag/patterns.html">Patterns</a>
       <a href="https://jameselliothart.github.io/tag/c.html">C#</a>
       <a href="https://jameselliothart.github.io/tag/f.html">F#</a>
