--- a/drafts/refactoring-for-purity.html
+++ b/drafts/refactoring-for-purity.html
@@ -24,7 +24,7 @@
 
 <meta name="author" content="James Hart" />
 <meta name="description" content="Worse, what if the class is reading from and writing to databases which are difficult to replicate locally? source Say you have a class like this: from pathlib import Path class Greeter(): def __init__(self, path): self._path = Path(path) def get_greetings(self): path = self._path.joinpath(&#39;greetings.txt&#39;) return …" />
-<meta name="keywords" content="Development, Opinion, Refactoring, FunctionalProgramming, Python">
+<meta name="keywords" content="Development, Refactoring, FunctionalProgramming, Python">
 
 <meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:title" content="Refactoring for Purity"/>
@@ -37,7 +37,6 @@
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="Development"/>
 <meta property="article:tag" content="Development"/>
-<meta property="article:tag" content="Opinion"/>
 <meta property="article:tag" content="Refactoring"/>
 <meta property="article:tag" content="FunctionalProgramming"/>
 <meta property="article:tag" content="Python"/>
@@ -168,7 +167,6 @@ In production code, it may not be as easy to see and the refactoring may not be 
   <div class="tag-cloud">
     <p>
       <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
-      <a href="https://jameselliothart.github.io/tag/opinion.html">Opinion</a>
       <a href="https://jameselliothart.github.io/tag/refactoring.html">Refactoring</a>
       <a href="https://jameselliothart.github.io/tag/functionalprogramming.html">FunctionalProgramming</a>
       <a href="https://jameselliothart.github.io/tag/python.html">Python</a>
