--- a/index.html
+++ b/index.html
@@ -79,6 +79,27 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/personal-retrospectives.html#personal-retrospectives">Personal Retrospectives</a></h2>
+    <p>
+          Posted on December 03, 2020 in <a href="https://jameselliothart.github.io/category/productivity.html">Productivity</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/productivity.html">Productivity</a>,              <a href="https://jameselliothart.github.io/tag/tips.html">Tips</a>
+    </p>
+  </header>
+  <div>
+      <p>For a little over a year, I have set aside some time on Friday of each week to run a personal retrospective in a similar vein to the <a href="https://www.linkedin.com/pulse/retrospective-most-important-agile-ceremony-sam-perera-he-him-/">Agile ceremony</a> (I actually have a recurring appointment in my Outlook for this).
+Essentially I reflect on the past week and write …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/personal-retrospectives.html#personal-retrospectives">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/pluralsight-podcast-appearance.html#pluralsight-podcast-appearance">Pluralsight Podcast Appearance</a></h2>
     <p>
           Posted on November 26, 2020 in <a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a>
@@ -281,27 +302,6 @@ In this post, we will implement the <code>done</code> command.
 We start with <code>done</code> rather than <code>todo</code> because <code>todo</code> will actually depend on functionality in <code>done</code> to save completed items whereas <code>done</code> has …</p>
       <br>
       <a class="btn" href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html#todo-kata-fsharp-part-1">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://jameselliothart.github.io/todo-kata-introduction.html#todo-kata-introduction">Todo Kata - Introduction</a></h2>
-    <p>
-          Posted on October 04, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/f.html">F#</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
-    </p>
-  </header>
-  <div>
-      <p>This post marks the introduction for a <a href="https://en.wikipedia.org/wiki/Kata_(programming)">code kata</a> series in which we will develop a command-line todo list manager in a few different languages.
-Each kata will assume a working development environment (I will be working in <a href="https://code.visualstudio.com/">VS Code</a> on Ubuntu 18.04) and basic familiarity with the syntax …</p>
-      <br>
-      <a class="btn" href="https://jameselliothart.github.io/todo-kata-introduction.html#todo-kata-introduction">    Continue reading
 </a>
   </div>
 </article>
