--- a/archives.html
+++ b/archives.html
@@ -83,6 +83,8 @@
   </header>
   <div>
     <dl>
+      <dt>December 03, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/personal-retrospectives.html">Personal Retrospectives</a></dd>
       <dt>November 26, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/pluralsight-podcast-appearance.html">Pluralsight Podcast Appearance</a></dd>
       <dt>November 01, 2020</dt>
