--- a/index2.html
+++ b/index2.html
@@ -79,6 +79,27 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-introduction.html#todo-kata-introduction">Todo Kata - Introduction</a></h2>
+    <p>
+          Posted on October 04, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/f.html">F#</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
+    </p>
+  </header>
+  <div>
+      <p>This post marks the introduction for a <a href="https://en.wikipedia.org/wiki/Kata_(programming)">code kata</a> series in which we will develop a command-line todo list manager in a few different languages.
+Each kata will assume a working development environment (I will be working in <a href="https://code.visualstudio.com/">VS Code</a> on Ubuntu 18.04) and basic familiarity with the syntax …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-introduction.html#todo-kata-introduction">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html#maps-of-devops-the-second-way">Maps of DevOps: The Second Way</a></h2>
     <p>
           Posted on May 19, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
